feat: CI/CD 파일 이름 변경 및 수동으로 CI를 트리거할 수 있도록 변경

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -1,4 +1,4 @@
-name: CD on Dev
+name: CD [Development]
 
 on:
   push:
@@ -58,7 +58,7 @@ jobs:
           port: ${{ secrets.SERVER_SSH_PORT }}
           envs: APPLICATION_PROD,APPLICATION_DEV,APPLICATION_SECRET,ENVIRONMENT,IMAGE_TAG,REPO_OWNER,DOCKER_IMAGE_NAME,DOCKERHUB_TOKEN,DOCKERHUB_USERNAME
           script_path: scripts/cd-dev.sh
-          
+
       - name: Deployment Summary
         if: always()
         run: |
