--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,20 @@
-name: Backend CI & Build
+name: CI
 
 on:
   pull_request:
     branches:
       - develop
       - main
+
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Deploy environment'
+        required: true
+        type: choice
+        options:
+          - dev
+          - prod
 
   workflow_call:
     inputs:
