feat: gradle wrapper를 gitignore에서 제외 및 사소한 수정

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -26,6 +26,7 @@ jobs:
     uses: ./.github/workflows/ci.yml
     with:
       environment: ${{ inputs.environment }}
+    secrets: inherit
 
   # 2. Deploy Job
   deploy:
