--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,6 @@ application-*.yml
 
 .gradle
 build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### STS ###
 .apt_generated
@@ -33,10 +30,8 @@ bin/
 *.iml
 *.ipr
 
-!**/src/main/**/out/
-!**/src/test/**/out/
 # 빌드 결과물인 out은 무시해야 하나, 소스코드 내에 있는건 지켜야 함
-/out/
+out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -237,3 +232,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,macos,windows,linux
+
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+!**/src/main/**/out/
+!**/src/test/**/out/
