feat: app/dockerfile로 파일 통합 및 dockerignore 수정
jar 파일 못 읽는 문제 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,7 +142,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: docker/kyeoungwoon/dockerfile
+          file: docker/app/dockerfile
           push: true
           tags: |
             ${{ secrets.DOCKER_IMAGE_NAME }}:${{ steps.set-env.outputs.image_tag }}
