--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,12 @@ services:
 
   # PostgreSQL Database
   umc-product-postgres:
-    image: postgis/postgis:16-3.4
+    image: postgres:18
     container_name: umc-product-postgresql-local
     ports:
       - "54321:5432"
     environment:
-      - POSTGRES_DB=umc_product_db_local
+      - POSTGRES_DB=umc_product
       - POSTGRES_USER=umc_product
       - POSTGRES_PASSWORD=umc_product_password
     volumes:
