fix: add secret inherit to cd file

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,6 +29,7 @@ jobs:
       contents: read
       checks: write
       pull-requests: write
+    secrets: inherit
     with:
       environment: ${{ inputs.environment }}
 
