docs: 각 Job들에 이모티콘을 붙여 예쁘게 변경

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,13 +3,13 @@ name: CD
 on:
   push:
     branches:
-      - develop
       - main
+      - develop
     paths:
       - 'src/**'
       - 'build.gradle.kts'
       - 'docker/**'
-      - 'cd.yml'
+      - '.github/workflows/cd.yml'
 
   workflow_dispatch:
     inputs:
