--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,15 @@ name: CI
 on:
   pull_request:
     branches:
-      - develop
       - main
+      - develop
+    paths:
+      - '.github/workflows/ci.yml'
 
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Deploy environment'
+        description: '배포 환경 (prod/dev)'
         required: true
         type: choice
         options:
@@ -19,12 +21,12 @@ on:
   workflow_call:
     inputs:
       environment:
-        description: 'Deploy environment (optional)'
+        description: '배포 환경'
         required: false
         type: string
     outputs:
       environment:
-        description: "Determined environment"
+        description: "결정된 환경"
         value: ${{ jobs.build-and-test.outputs.environment }}
       repo_owner:
         description: "Repository owner"
@@ -62,10 +64,10 @@ jobs:
     #            tag-suffix: arm64
 
     steps:
-      - name: Checkout code
+      - name: 📦 코드베이스 체크아웃
         uses: actions/checkout@v4
 
-      - name: Set deployment environment
+      - name: 🎯 배포 환경 설정
         id: set-env
         run: |
           INPUT_ENV="${{ inputs.environment }}"
@@ -95,50 +97,50 @@ jobs:
           IMAGE_TAG="${ENVIRONMENT}-${SHORT_SHA}"
           echo "image_tag=${IMAGE_TAG}" >> $GITHUB_OUTPUT
 
-      - name: Setup JDK 21
+      - name: 🧑‍💻JDK 21 Coretto 설정
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'corretto'
           cache: gradle
 
-      - name: Grant execute permission for gradlew
+      - name: 🔑 Gradlew 실행 권한 부여
         run: chmod +x gradlew
 
-      - name: Compile Check
+      - name: 🔍 컴파일 체크
         run: ./gradlew compileJava compileTestJava
 
-      - name: Run Tests
+      - name: 🧪 테스트 실행
         run: ./gradlew test
 
-      - name: Publish Test Results
+      - name: 📊 테스트 결과 배포
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           files: build/test-results/test/*.xml
           check_name: "Backend Test Results"
 
-      - name: Build JAR
+      - name: 🏗️ Build JAR
         run: ./gradlew bootJar
 
-      - name: Check build artifacts
+      - name: 📋 빌드 결과 확인
         run: |
           ls -la build/libs/
           echo "Current directory: $(pwd)"
 
-      - name: Set up QEMU
+      - name: 🖥️ Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Set up Docker Buildx
+      - name: 🔧 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: 🐳 Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -151,7 +153,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build Summary
+      - name: 📝 Build Summary
         if: always()
         run: |
           echo "### Build Summary :package:" >> $GITHUB_STEP_SUMMARY
