feat: GitHub Enviromment 명칭 변경
dev, prod가 UI에서 보이는게 안 예뻐서 full name으로 변경

부가적으로 docker image cache 제거
(추후 추가적으로 빌드 개선 작업 예정)

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,8 +18,8 @@ on:
         required: true
         type: choice
         options:
-          - dev
-          - prod
+          - Development
+          - Production
 
 jobs:
   # 1. 공통 빌드/테스트 워크플로우 호출 (ci.yml 재사용)
