feat: CI/CD 파일이 변경될 때에도 트리거되도록 변경
오타 수정도 했어요

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,7 @@ on:
       - 'src/**'
       - 'build.gradle.kts'
       - 'docker/**'
+      - '.github/workflows/ci.yml'
       - '.github/workflows/cd.yml'
 
   workflow_dispatch:
