--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  jackson:
+    generator:
+      write-numbers-as-strings: true
+
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:postgresql:16:///test?TC_DAEMON=true
