--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
 
   # PostgreSQL Database
   umc-product-postgres:
-    image: postgres:18
+    #    image: postgres:18
+    image: postgis/postgis:18-3.6
+    platform: linux/amd64  # Rosetta 2로 x86 에뮬레이션 (M 시리즈 맥 호환)
     container_name: umc-product-postgresql-local
     ports:
       - "54321:5432"
