--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,6 @@ spring:
     # 기본적으로 local 프로필을 활성화, 실수로 prod에 접근하는 것을 방지함
     active: local
   config:
-    # application-secret 받도록 설정, 우리는 활용하지 않음.
     import:
       - optional:classpath:application-secret.yml
       - optional:file:/app/config/application-secret.yml
@@ -55,8 +54,8 @@ spring:
     hikari:
       auto-commit: true
 
-      maximum-pool-size: 10       # Core * 2 + 여유분
-      minimum-idle: 10            # max와 동일하게 설정 (고정 풀 크기 권장)
+      maximum-pool-size: ${HIKARI_MAX_POOL_SIZE:10}
+      minimum-idle: ${HIKARI_MIN_IDLE:10}
 
       # 3. 수명 및 타임아웃
       max-lifetime: 1800000       # 30분
@@ -69,8 +68,8 @@ spring:
     enabled: true
 
   jpa:
-    # JPA/Hibernate가 PostGIS의 공간 타입을 지원할 수 있도록 추가함
-    database-platform: org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
+    # database-platform은 SpringBoot가 hibernate-spatial 의존성을 기반으로 자동으로 선택함
+    # 따라서 포함하지 않도록 함.
     hibernate:
       ddl-auto: validate
     open-in-view: false
