feat: ci와 cd runner 분리

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,7 +38,7 @@ jobs:
   deploy:
     needs: ci-and-build
     if: needs.ci-and-build.outputs.environment != 'test'
-    runs-on: self-hosted
+    runs-on: [ self-hosted, cd-runner ]
     # 빌드 단계에서 결정된 환경 사용
     environment: ${{ needs.ci-and-build.outputs.environment }}
 
