feat: commit status를 달도록 변경 및 CD에 package 권한 부여

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,6 +30,9 @@ jobs:
       contents: read
       checks: write
       pull-requests: write
+      packages: write
+      statuses: write
+      deployments: write
     secrets: inherit
     with:
       environment: ${{ inputs.environment }}
