fix: GHCR에 push하는 tag lower 처리

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
           fi
 
           echo "environment=${ENVIRONMENT}" >> $GITHUB_OUTPUT
+          echo "lower_environment=$(echo "${ENVIRONMENT}" | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
           REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           echo "repo_owner=${REPO_OWNER}" >> $GITHUB_OUTPUT
@@ -169,7 +170,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }} # PR의 경우 빌드까지만 하고 DockerHub에 푸시하지 않음
           tags: |
             ghcr.io/${{ steps.set-env.outputs.repo_owner }}/server:${{ steps.set-env.outputs.image_tag }}
-            ghcr.io/${{ steps.set-env.outputs.repo_owner }}/server:${{ steps.set-env.outputs.environment }}-latest
+            ghcr.io/${{ steps.set-env.outputs.repo_owner }}/server:${{ steps.set-env.outputs.lower_environment }}-latest
           platforms: linux/amd64,linux/arm64
           # 캐시는 추후 빌드 성능 최적화를 통해 개선, 현재는 네트워크 비용이 더 많이 들어서 비활성화 합니다.
       #          cache-from: type=gha
