fix: heredoc을 이용해서 echo가 문자열을 해석하지 않도록 변경

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -207,8 +207,14 @@ jobs:
             esac
             
             mkdir -p ${{ secrets.SERVER_APP_DIRECTORY }}/config
-            echo "${{ secrets.APPLICATION_SECRET }}" > ${{ secrets.SERVER_APP_DIRECTORY }}/config/application-secret.yml
-            echo "${{ secrets.APPLICATION_PROFILE_SECRET }}" > ${{ secrets.SERVER_APP_DIRECTORY }}/config/application-${PROFILE}.yml
+            
+            cat > ${{ secrets.SERVER_APP_DIRECTORY }}/config/application-secret.yml << 'EOF'
+            ${{ secrets.APPLICATION_SECRET }}
+            EOF
+            
+            cat > ${{ secrets.SERVER_APP_DIRECTORY }}/config/application-${PROFILE}.yml << 'EOF'
+            ${{ secrets.APPLICATION_PROFILE_SECRET }}
+            EOF
             
             # 기존 컨테이너 중지 및 제거
             echo ""
